--- a/Hostinger.css
+++ b/Hostinger.css
@@ -2,7 +2,7 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
 section{
     margin: auto;
-    max-width: max-content;
+    max-width: 1250px;
 }
 
 h2{
@@ -27,7 +27,9 @@ p{
     display: flex;
     flex-direction: row;
     margin: 50px;
-    max-width: max-content;
+    max-width: 1000px;
+    flex-wrap: nowrap;
+    justify-content: space-evenly;
 }
 
 .imagen img{
@@ -42,18 +44,28 @@ p{
 }
 
 .reseña{
-    margin: auto;
+    background-color: rgba(240, 255, 255, 0.744);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
     width: 200px;
+    padding: 20px;
 }
 
 .reseña img{
-    margin: auto;
-    width: 100px;
+    width: 80%;
+}
+
+.estrellas {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.estrellas img{
+    width: 55%;
 }
 
 i{
-    margin-left: 0px;
+    color: rgb(105,75,231);
 }
-
-
 
