--- a/Hostinger.css
+++ b/Hostinger.css
@@ -1,5 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
+
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 section{
     margin: auto;
     max-width: 1250px;
@@ -67,5 +74,9 @@ p{
 
 i{
     color: rgb(105,75,231);
+}
+
+@media screen {
+    
 }
 
